Package name lowercase

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "jsProductTour",
+  "name": "js-product-tour",
   "homepage": "https://github.com/torzer/jsProductTour",
   "authors": [
     "Ademir Mazer Junior <mazer@torzer.com>"
